--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "TOLEConnectionString": "Server=localhost\\SQLEXPRESS;Database=TOLEdB;Integrated Security=true;TrustServerCertificate=true;"
+
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
