Sucesso em abrir a view (é necessaio que a pasta view e a pasta controller fique direto no projeto e não dentro de outra pasta. Caso fique dentro de  outra, deve-se expecificar o caminho completo.
Comecei a mexer na index principal (estoque)

--- a/TOLEAGRI.csproj
+++ b/TOLEAGRI.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="Controllers\EstoqueController.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="Migrations\" />
   </ItemGroup>
 
