Criação de uma classe Registro e consequentemente servilço e controller também, para separar a criação dos registros no banco.

--- a/TOLEAGRI.csproj
+++ b/TOLEAGRI.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Controllers\RegistroController.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Controllers\RegistroController.cs" />
     <Content Include="Controllers\EstoqueController.cs" />
   </ItemGroup>
 
