--- a/TOLEAGRI.csproj
+++ b/TOLEAGRI.csproj
@@ -30,11 +30,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Update="Views\Estoque\Modal\DeletarAllEstoque.cshtml">
-      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
-      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
-    </Content>
-    <Content Update="Views\Estoque\Teste.cshtml">
+    <Content Update="Views\Estoque\Modal\DeletarAllPeca.cshtml">
       <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
