descobri como faz backup do banco e decidi mudar a forma que vai ser feito a entrada e saida do estoque, decidi separar em dois botões ao inves de um, para facilitar interpretação

--- a/TOLEAGRI.csproj
+++ b/TOLEAGRI.csproj
@@ -29,4 +29,11 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="Views\Estoque\Modal\EntradaEstoque.cshtml">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
