Tentativas de concluir a validação do codigoSistema dentro do form de Saida

--- a/TOLEAGRI.csproj
+++ b/TOLEAGRI.csproj
@@ -30,6 +30,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Update="Views\Estoque\Modal\DeleteAllPeca.cshtml">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
     <Content Update="Views\Estoque\Modal\EntradaEstoque.cshtml">
       <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
